# sb-on-demand-examples

./: .gitignore  .gitmodules  AGENTS.md  CODEOWNERS  README.md  coin-flip-program-devnet.txt  package.json  pnpm-lock.yaml  socket.yml
.github/: dependabot.yml
common/rust-feed-creation/: Cargo.toml  README.md
common/rust-feed-creation/src/: main.rs
evm/: README.md  (+10 more)
sb-randomness-on-demand/sb-randomness/programs/sb-randomness/: Cargo.toml
sb-randomness-on-demand/sb-randomness/programs/sb-randomness/src/: lib.rs
solana/: .env.example  Anchor.toml  Cargo.toml  README.md  get_transaction_logs.ts  package.json  pnpm-lock.yaml  tsconfig.json  x.txt
solana/examples/: scripts-README.md  utils.ts
solana/examples/feeds/: x402Update.ts
solana/examples/feeds/advanced/: runUpdate.ts
solana/examples/feeds/basic/: README.md  managedUpdate.ts
solana/examples/feeds/legacy/: README.md  runFeed.ts  view.ts
solana/examples/randomness/: README.md  gill.ts  gillUtils.ts  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
solana/examples/streaming/: README.md  crossbarStream.ts  runSurge.ts
solana/examples/variable-overrides/: package.json
solana/examples/variable-overrides/scripts/: test-simple.ts
solana/feeds/: README.md
solana/feeds/advanced/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
solana/feeds/advanced/programs/advanced-oracle-example/: Cargo.toml
solana/feeds/advanced/programs/advanced-oracle-example/src/: lib.rs  utils.rs
solana/feeds/advanced/scripts/: README.md  runUpdate.ts
solana/feeds/basic/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
solana/feeds/basic/programs/basic-oracle-example/: Cargo.toml
solana/feeds/basic/programs/basic-oracle-example/src/: lib.rs
solana/feeds/basic/programs/basic-oracle-example/tests/: litesvm_oracle_test.rs
solana/feeds/basic/scripts/: README.md  createManagedFeed.ts  managedUpdate.ts  run-cargo-build-sbf.sh  utils.ts  writeBasicIdl.ts
solana/legacy/benchmarks/: benchmark.ts  benchmarkCU.ts
solana/legacy/feeds/: README.md  package.json  runFeed.ts
solana/legacy/variable-overrides/: package.json
solana/legacy/variable-overrides/programs/sb-on-demand-solana/: Cargo.toml
solana/legacy/variable-overrides/programs/sb-on-demand-solana/src/: lib.rs
solana/legacy/variable-overrides/scripts/utils/: utils.ts
solana/prediction-market/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
solana/prediction-market/programs/prediction-market/: Cargo.toml  README.md
solana/prediction-market/programs/prediction-market/src/: lib.rs
solana/prediction-market/scripts/: testKalshiFeedVerification.ts  utils.ts
solana/programs/advanced-oracle-example/: Cargo.toml
solana/programs/advanced-oracle-example/src/: lib.rs  utils.rs
solana/programs/basic-oracle-example/: Cargo.toml
solana/programs/basic-oracle-example/src/: lib.rs
solana/programs/basic-oracle-example/tests/: litesvm_oracle_test.rs
solana/programs/prediction-market/: Cargo.toml  README.md
solana/programs/prediction-market/src/: lib.rs
solana/programs/sb-on-demand-solana/: Cargo.toml
solana/programs/sb-on-demand-solana/src/: lib.rs
solana/programs/sb-randomness/: Cargo.toml
solana/programs/sb-randomness/src/: lib.rs
solana/randomness/coin-flip/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
solana/randomness/coin-flip/programs/sb-randomness/: Cargo.toml
solana/randomness/coin-flip/programs/sb-randomness/src/: lib.rs
solana/randomness/coin-flip/scripts/: README.md  eclipse.ts  find-gateway.ts  index.ts  list-gateways.ts  run-coinflip-batch.ts  utils.ts
solana/randomness/pancake-stacker/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  server.ts
solana/randomness/pancake-stacker/programs/pancake-stacker/: Cargo.toml
solana/randomness/pancake-stacker/programs/pancake-stacker/src/: lib.rs
solana/randomness/pancake-stacker/scripts/: index.ts  utils.ts
solana/randomness/pancake-stacker/ui/: index.html  package.json  vite.config.js
solana/sb-on-demand-secret/sb-on-demand-secrets/: README.md  bun.lockb  package.json
solana/sb-on-demand-secret/sb-on-demand-secrets-llm/: Dockerfile
solana/sb-on-demand-secret/sb-on-demand-secrets-llm/scripts/: pull.ts
solana/sb-on-demand-secret/sb-on-demand-secrets-social-metrics/: README.md
solana/sb-on-demand-secret/sb-on-demand-secrets-social-metrics/scripts/: utils.ts
solana/sb-on-demand-secret/sb-on-demand-secrets/programs/sb-on-demand-solana/: Cargo.toml
solana/sb-on-demand-secret/sb-on-demand-secrets/scripts/: pull.ts  utils.ts
solana/sb-on-demand-variable-overrides/: README.md
solana/sb-on-demand-variable-overrides/scripts/: pull.ts  test-multi-auth.ts
solana/sb-randomness-on-demand/: README.md  index.ts  package.json  pnpm-lock.yaml  utils.ts
solana/sb-randomness-on-demand/sb-randomness/: Anchor.toml  Cargo.toml  package.json
solana/sb-randomness-on-demand/sb-randomness/programs/sb-randomness/: Cargo.toml
solana/scripts/: README.md  README_VARIABLES.md  benchmarkCU.ts  crossbarStream.ts  crossbeamStream.ts  runBundle.ts  runFeed.ts  runStream.ts  runSurge.ts  stream.ts  utils.ts  x.ts
solana/scripts/benchmarks/: README.md  benchmark.ts  benchmarkCU.ts
solana/scripts/feeds/: README.md  createFeedWithStorageExample.ts  runBundle.ts  runFeed.ts  runUpdate.ts  x402Update.ts
solana/scripts/feeds/advanced/: README.md  runUpdate.ts
solana/scripts/feeds/basic/: README.md  managedUpdate.ts  simpleRead.ts
solana/scripts/feeds/legacy/: README.md  runFeed.ts  runJob.ts
solana/scripts/job-testing/: README.md  runJob.ts  runJobWithVariables.ts
solana/scripts/prediction-market-examples/: testKalshiFeedVerification.ts
solana/scripts/streaming/: README.md  crossbarStream.ts  runSurge.ts  stream.ts
solana/surge/: .env.example  README.md  package-lock.json  package.json  runSurge.ts
solana/surge/scripts/: runSurge.ts
solana/tests/: .gitkeep
solana/x402/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
solana/x402/scripts/: x402Update.ts
(+242 files in other folders)
