[workspace]
resolver = "2"
members = ["programs/basic-oracle-example"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.bpf]
inherits = "release"
overflow-checks = false

