[package]
name = "advanced-oracle-example"
version = "0.1.0"
description = "Advanced Switchboard On-Demand Oracle Integration Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "advanced_oracle_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
switchboard-on-demand = { path = "/Users/mgild/projects/sbv3/rust/switchboard-on-demand" }
bytemuck = "1.14"