[package]
name = "advanced-oracle-example"
version = "0.1.0"
description = "Advanced Switchboard On-Demand Oracle Integration Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "advanced_oracle_example"

[features]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
switchboard-on-demand = { path = "/Users/mgild/projects/sbv3/rust/switchboard-on-demand", features = ["devnet", "pinocchio"] }
bytemuck = "1.14"
pinocchio = { version = "0.9.2", features = ["std"] }
bs58 = "0.5"

