[package]
name = "basic-oracle-example"
version = "0.1.0"
description = "Basic Switchboard On-Demand Oracle Integration Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_oracle_example"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "switchboard-on-demand/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
switchboard-on-demand = { path = "/Users/mgild/projects/sbv3/rust/switchboard-on-demand", features = ["anchor", "devnet", "client"] }
bytemuck = "1.14"

[dev-dependencies]
litesvm = "0.3"
solana-sdk = "~2.0.5"  # Match litesvm's version
hex = "0.4"
