[package]
name = "sb-on-demand-solana"
version = "0.1.0"
description = "Switchboard On-Demand Oracle Integration for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sb_on_demand_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
faster-hex = "0.10.0"
solana-program-ed25519-dalek-bump = "1.16.3"
solana-program-memory = "3.0.0"
switchboard-on-demand = { version = "0.5.2", features = ["anchor", "devnet"] }
