[package]
name = "sb-on-demand-solana"
version = "0.1.0"
description = "Switchboard On-Demand Oracle Integration for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sb_on_demand_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
faster-hex = "0.10.0"
solana-program-ed25519-dalek-bump = "1.16.3"
solana-program-memory = "2.2"
switchboard-on-demand = { version = "0.5.5", features = ["anchor", "devnet"] }
base64ct = "=1.5.0"
bytemuck = { version = "1.23.2", features = ["min_const_generics"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1
