[package]
name = "sb-on-demand-solana"
version = "0.1.0"
description = "Switchboard On-Demand Oracle Integration for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sb_on_demand_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
bytemuck = "1.23.2"
switchboard-on-demand = { version = "0.7.2", features = ["anchor", "devnet"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1
