[package]
resolver = "2"
name = "sb-randomness"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sb_randomness"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
solana-program = ">=2,<3"
bytemuck = "1.15.0"
switchboard-on-demand = { version = "0.9.2", features = ["anchor"] }


