[package]
name = "prediction-market"
version = "0.1.0"
description = "Prediction Market Oracle Integration Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "switchboard-on-demand/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
switchboard-on-demand = { version = "=0.10.3", features = ["anchor", "devnet"] }
switchboard-protos = { version = "^0.2.1", features = ["serde"] }
bytemuck = "1.14"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
prost = "0.13"
solana-program = ">=2,<3"
faster-hex = "0.10.0"
# Pin these to avoid constant_time_eq v0.4.2 which requires edition2024
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
