[package]
name = "advanced-oracle-example"
version = "0.1.0"
description = "Advanced Switchboard On-Demand Oracle Integration Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "advanced_oracle_example"

[features]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
switchboard-on-demand = { version = "0.13.0", features = ["pinocchio", "devnet"] }
bytemuck = "1.14"
pinocchio = { version = "0.11.2", features = ["cpi"] }
solana-msg = "2.2.1"
bs58 = "0.5"
# Pin these to avoid constant_time_eq v0.4.2 which requires edition2024
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
