[package]
name = "basic-oracle-example"
version = "0.1.0"
description = "Basic Switchboard On-Demand Oracle Integration Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_oracle_example"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "switchboard-on-demand/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
switchboard-on-demand = { version = "=0.10.3", features = ["anchor", "devnet"] }
bytemuck = "1.14"
# Pin these to avoid constant_time_eq v0.4.2 which requires edition2024
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"

[dev-dependencies]
litesvm = "=0.6.1"
solana-sdk = "2.1"
hex = "0.4"
openssl = { version = "0.10.74", features = ["vendored"] }
