[package]
resolver = "2"
name = "pancake-stacker"
version = "0.1.0"
description = "Pancake stacking game using Switchboard randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pancake_stacker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "switchboard-on-demand/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
solana-program = ">=2,<3"
bytemuck = "1.15.0"
switchboard-on-demand = { version = "0.10.0", features = ["anchor"] }
# Pin these to avoid constant_time_eq v0.4.2 which requires edition2024
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
